--- a/app/Templates/article.html
+++ b/app/Templates/article.html
@@ -16,7 +16,7 @@
 
     <div class="row">
             <div class="col-md-6">
-                    <img src={{item.urlToImage}} height="200" width="200">
+                    <img src="{{item.urlToImage}}" height="200" width="200">
                     <h4>WRITTEN BY: {{item.author}}</h4>
                 </div>
             
