--- a/app/Templates/macros.html
+++ b/app/Templates/macros.html
@@ -3,14 +3,16 @@
 {% for source in source_list%}
 <div class="container">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-xs-12 col-sm-4 col-lg-4 col-md-4" id="source">
             <h3>
                 {{source.name}}
             </h3>
+            <br>
         </div>
-        <div class="col-md-5">
+        <div class="col-xs-12 col-sm-5 col-lg-5 col-md-5" id="description">
             <p>{{source.description}}</p>
             <a href="/article/{{source.id}}">Visit site</a>
+            <br>
         </div>
     </div>
 </div>
