--- a/app/Templates/article.html
+++ b/app/Templates/article.html
@@ -16,15 +16,15 @@
 
     <div class="row">
             <div class="col-md-6">
-                    <img src="{{item.urlToImage}}" height="200" width="200">
+                    <img src="{{item.urlToImage}}" height="100%" width="100%">
                     <h4>WRITTEN BY: {{item.author}}</h4>
                 </div>
             
                 <div class="col-md-6">
                     <h3>{{ item.title}} </h3>
-                    <h4>{{ item.description }}</h4>
-                    <h5>{{item.content}}</h5>
-                    <h5>Published on: {{item.publishedAt}}</h5>
+                    <h5>{{ item.description }}</h5>
+                    <h6>{{item.content}}</h6>
+                    <p>Published on: {{item.publishedAt}}</p>
                     <h3><a href={{item.url}} target="_blank">Read full article</a></h3>
                 </div>
     </div>
