--- a/app/Templates/navbar.html
+++ b/app/Templates/navbar.html
@@ -14,8 +14,8 @@
                     <li><a href="/article/al-jazeera-english">Al Jazeera</a></li>
                     <li><a href="/article/fox-news">Fox News</a></li>
                     <li><a href="/article/the-new-york-times">The New York Times</a></li>
-                    <li><a href="/the-washington-post">The Washington Post</a></li>
-                    <li><a href="/cnn">CNN</a></li>
+                    <li><a href="/article/the-washington-post">The Washington Post</a></li>
+                    <li><a href="/article/cnn">CNN</a></li>
                 </ul>
             </div>
         </div>
